; ModuleID = '/home/carl/AnghaBench/postgres/src/port/extr_inet_net_ntop.c_pg_inet_net_ntop.c'
source_filename = "/home/carl/AnghaBench/postgres/src/port/extr_inet_net_ntop.c_pg_inet_net_ntop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EAFNOSUPPORT = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @pg_inet_net_ntop(i32 %0, i8* %1, i32 %2, i8* %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i64 %4, i64* %11, align 8
  %12 = load i32, i32* %7, align 4
  switch i32 %12, label %25 [
    i32 129, label %13
    i32 128, label %19
    i32 130, label %19
  ]

13:                                               ; preds = %5
  %14 = load i8*, i8** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load i8*, i8** %10, align 8
  %17 = load i64, i64* %11, align 8
  %18 = call i8* @inet_net_ntop_ipv4(i8* %14, i32 %15, i8* %16, i64 %17)
  store i8* %18, i8** %6, align 8
  br label %27

19:                                               ; preds = %5, %5
  %20 = load i8*, i8** %8, align 8
  %21 = load i32, i32* %9, align 4
  %22 = load i8*, i8** %10, align 8
  %23 = load i64, i64* %11, align 8
  %24 = call i8* @inet_net_ntop_ipv6(i8* %20, i32 %21, i8* %22, i64 %23)
  store i8* %24, i8** %6, align 8
  br label %27

25:                                               ; preds = %5
  %26 = load i32, i32* @EAFNOSUPPORT, align 4
  store i32 %26, i32* @errno, align 4
  store i8* null, i8** %6, align 8
  br label %27

27:                                               ; preds = %25, %19, %13
  %28 = load i8*, i8** %6, align 8
  ret i8* %28
}

declare dso_local i8* @inet_net_ntop_ipv4(i8*, i32, i8*, i64) #1

declare dso_local i8* @inet_net_ntop_ipv6(i8*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
